--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ tokenizers>=0.5.2
 easse@ git+git://github.com/feralvam/easse.git
 kenlm@ git+git://github.com/kpu/kenlm.git
 cachier>=1.2.8
+fastbpe
