--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,5 @@ easse@ git+git://github.com/feralvam/easse.git
 kenlm@ git+git://github.com/kpu/kenlm.git
 cachier>=1.2.8
 fastbpe
+transliterate
+npy-append-array
