--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ spacy>=2.1.3,<3
 joblib>=0.13.2
 python-Levenshtein>=0.12.0
 # https://github.com/pytorch/fairseq/issues/3535
-fairseq==0.10.2
+# fairseq==0.10.2
+fairseq@ git+git://github.com/pytorch/fairseq.git
 truecase
 sentencepiece>=0.1.83
 imohash>=1.0.4
