--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ joblib>=0.13.2
 python-Levenshtein>=0.12.0
 # https://github.com/pytorch/fairseq/issues/3535
 # fairseq==0.10.2
-fairseq@ git+git://github.com/pytorch/fairseq.git
+fairseq@ git+git://github.com/pytorch/fairseq.git@main
 truecase
 sentencepiece>=0.1.83
 imohash>=1.0.4
