--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ spacy>=2.1.3,<3
 joblib>=0.13.2
 python-Levenshtein>=0.12.0
 # https://github.com/pytorch/fairseq/issues/3535
-# fairseq==0.10.2
+fairseq==0.10.2
 # fairseq@ https://github.com/pytorch/fairseq/archive/refs/heads/main.zip
-fairseq@ https://github.com/mnoukhov/fairseq/archive/refs/heads/hydrate-bart.zip
+# fairseq@ https://github.com/mnoukhov/fairseq/archive/refs/heads/hydrate-bart.zip
 truecase
 sentencepiece>=0.1.83
 imohash>=1.0.4
