--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ nltk>=3.4.3
 tqdm>=4.45.0
 sklearn>=0.0
 torch>=1.4.0
+transformers==4.19.4
+datasets==2.2.2
 scipy>=1.3.1
 gitpython
 spacy>=2.1.3,<3
@@ -30,3 +32,4 @@ cachier>=1.2.8
 fastbpe
 transliterate
 npy-append-array
+sacrebleu
